--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tanstack/react-query": "^5.66.7",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "antd": "^5.24.2",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -29,13 +30,15 @@
     "jwt-decode": "^4.0.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-select": "^5.10.0",
     "react-transition-group": "^4.4.5",
     "recharts": "^3.1.0",
-    "simple-datatables": "^10.0.0"
+    "simple-datatables": "^10.0.0",
+    "sweetalert2": "^11.23.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.5.0",
